Kubernates/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-service

spec:
  selector:
    app: recon0-backend

  ports:
    - port: 8080
      targetPort: 8080

  type: ClusterIP
