Kubernates/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service

spec:
  selector:
    app: recon0-frontend

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
