Kubernates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: recon0-ingress

spec:
  ingressClassName: traefik

  rules:
    #- host: recon0.yourdomain.com 

    - http:
        paths:

          - path: /

            pathType: Prefix

            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          - path: /api

            pathType: Prefix

            backend:
              service:
                name: backend-service
                port:
                  number: 8080
